fixed counter overflowing

--- a/src/pages/cards/searchRoom.scss
+++ b/src/pages/cards/searchRoom.scss
@@ -14,7 +14,7 @@
 
     
 }
-.card__guests .input__container {
+.card__guests {
     position: relative;
     width: 320px;
 
@@ -25,9 +25,9 @@
 .guest__counter {
     display: none; 
     z-index: 2;
-    position: sticky;
+    position: absolute;
     // top: 412px;
-    // width: 320px;
+    width: 100%;
     padding: 7px 7px 13px 15px;
     background-color: #fff;
     border: 1px solid rgba(31, 32, 65, 0.5);
